<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.86" />

    <Button
        android:id="@+id/BtnAC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/ac"
        android:textColor="@color/black"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@+id/horizontal2"
        app:layout_constraintEnd_toStartOf="@+id/vertical3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal1" />

    <Button
        android:id="@+id/BtnDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/div"
        android:textColor="@color/black"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@+id/horizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical3"
        app:layout_constraintTop_toTopOf="@+id/horizontal1" />

    <Button
        android:id="@+id/BtnEight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/eight"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal3"
        app:layout_constraintEnd_toStartOf="@+id/vertical1"
        app:layout_constraintStart_toStartOf="@+id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal2" />

    <Button
        android:id="@+id/BtnNine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Nine"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal3"
        app:layout_constraintEnd_toStartOf="@+id/vertical3"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal2"
        app:layout_constraintVertical_bias="0.351" />

    <Button
        android:id="@+id/BtnMult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/mult"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/horizontal3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical3"
        app:layout_constraintTop_toTopOf="@+id/horizontal2" />

    <Button
        android:id="@+id/BtnFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Four"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal4"
        app:layout_constraintEnd_toStartOf="@+id/vertical1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal3" />

    <Button
        android:id="@+id/BtnFive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Five"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal4"
        app:layout_constraintEnd_toStartOf="@+id/vertical1"
        app:layout_constraintStart_toStartOf="@+id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal3" />

    <Button
        android:id="@+id/BtnSix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Six"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal4"
        app:layout_constraintEnd_toStartOf="@+id/vertical3"
        app:layout_constraintStart_toStartOf="@+id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal3" />

    <Button
        android:id="@+id/BtnPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Plus"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical3"
        app:layout_constraintTop_toTopOf="@+id/horizontal3" />

    <Button
        android:id="@+id/BtnOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/One"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal5"
        app:layout_constraintEnd_toStartOf="@+id/vertical1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal4" />

    <Button
        android:id="@+id/BtnTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Two"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal5"
        app:layout_constraintEnd_toStartOf="@+id/vertical1"
        app:layout_constraintStart_toStartOf="@+id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/BtnThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Three"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal5"
        app:layout_constraintEnd_toStartOf="@+id/vertical3"
        app:layout_constraintStart_toStartOf="@+id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal4" />

    <Button
        android:id="@+id/BtnMenus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Menus"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/horizontal5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical3"
        app:layout_constraintTop_toTopOf="@+id/horizontal4" />

    <Button
        android:id="@+id/BtnCero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Zero"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal5" />

    <Button
        android:id="@+id/BtnPoint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Point"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical3"
        app:layout_constraintStart_toStartOf="@+id/vertical1"
        app:layout_constraintTop_toTopOf="@+id/horizontal5" />

    <Button
        android:id="@+id/BtnEqual"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Equal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical3"
        app:layout_constraintTop_toTopOf="@+id/horizontal5" />

    <Button
        android:id="@+id/BtnSeven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="#B6B0B0"
        android:text="@string/Seven"
        android:textColor="@color/black"
        android:textSize="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toTopOf="@+id/horizontal3"
        app:layout_constraintEnd_toStartOf="@+id/vertical1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="textEnd"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@android:dimen/app_icon_size"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>